--- a/food.html
+++ b/food.html
@@ -69,7 +69,7 @@
 
     <nav class="fixed w-full z-[100] py-6 px-10 flex justify-between items-center bg-slate-950/80 backdrop-blur-md border-b border-white/5">
         <div class="flex items-center gap-4 cursor-pointer" onclick="showPage('home')">
-            <img src="https://files.oaiusercontent.com/file-K8kP86jWp0o1G5Yh9U1zXo9c?se=2024-10-24T18%3A10%3A17Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Dimage_c2f51e.png&sig=41D7rOa7Aal8p6v5Y7mYfH8Z2m%2B9lXnK2f8vO6P8o6k%3D" alt="FC Logo" class="h-12 w-auto logo-float">
+            <img src="Black And White Modern Vintage Retro Brand Logo.png" alt="FC Logo" class="h-12 w-auto logo-float">
             <div class="hidden md:block">
                 <h1 class="text-xl font-black tracking-tighter leading-none">FRESH-CHECK</h1>
                 <p class="text-[8px] text-green-500 font-bold uppercase tracking-[0.3em]">Liam & Shriyansh</p>
@@ -305,4 +305,5 @@
         animate();
     </script>
 </body>
+
 </html>
