--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <nav class="fixed w-full z-[100] py-6 px-10 flex justify-between items-center bg-slate-950/90 backdrop-blur-md border-b border-white/5">
         <div class="flex items-center gap-4 cursor-pointer" onclick="showPage('home')">
-            <img src="YOUR_LOGO_URL" alt="FC" class="h-12 w-auto logo-float">
+            <img src="Black And White Modern Vintage Retro Brand Logo.png" alt="FC" class="h-12 w-auto logo-float">
             <div class="hidden md:block">
                 <h1 class="text-xl font-black tracking-tighter leading-none">FRESH-CHECK</h1>
             </div>
@@ -222,3 +222,4 @@
     </script>
 </body>
 </html>
+
