--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <nav class="fixed w-full z-[100] py-6 px-10 flex justify-between items-center bg-slate-950/95 backdrop-blur-md border-b border-white/10">
         <div class="flex items-center gap-4 cursor-pointer" onclick="showPage('home')">
-            <img src="logo.png" alt="FC" class="h-10 w-auto">
+            <img src="Black And White Modern Vintage Retro Brand Logo.png" alt="FC" class="h-10 w-auto">
             <h1 class="text-xl font-black tracking-tighter uppercase">Fresh-Check</h1>
         </div>
         <div class="hidden lg:flex gap-8 uppercase">
@@ -315,4 +315,5 @@
         });
     </script>
 </body>
+
 </html>
